[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/gfx/ui/carrot.png" type="Texture" id=1]
[ext_resource path="res://src/ui/HUD.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Kenney Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="HUD" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 110.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="ScoreBox" type="MarginContainer" parent="."]
margin_right = 872.0
margin_bottom = 110.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBox" type="HBoxContainer" parent="ScoreBox"]
margin_left = 20.0
margin_top = 20.0
margin_right = 852.0
margin_bottom = 90.0

[node name="CarrotIcon" type="TextureRect" parent="ScoreBox/HBox"]
margin_right = 70.0
margin_bottom = 70.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="ScoreLabel" type="Label" parent="ScoreBox/HBox"]
margin_left = 74.0
margin_right = 122.0
margin_bottom = 70.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "x 10"
valign = 1

[node name="Spacer" type="MarginContainer" parent="ScoreBox/HBox"]
visible = false
margin_left = 56.0
margin_right = 96.0
margin_bottom = 32.0
custom_constants/margin_right = 40

[node name="DeadImpIcon" type="TextureRect" parent="ScoreBox/HBox"]
visible = false
margin_left = 56.0
margin_right = 56.0
margin_bottom = 32.0

[node name="DeadScoreLabel" type="Label" parent="ScoreBox/HBox"]
visible = false
margin_left = 56.0
margin_right = 104.0
margin_bottom = 32.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "x 10"
valign = 1

[node name="HourglassBox" type="MarginContainer" parent="."]
margin_left = 876.0
margin_right = 1024.0
margin_bottom = 110.0
custom_constants/margin_right = 100
custom_constants/margin_top = 0
custom_constants/margin_bottom = 20

[node name="TimeLabel" type="Label" parent="HourglassBox"]
margin_right = 48.0
margin_bottom = 90.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "60s"
valign = 1
